--- a/25.弹性布局 align-items.html
+++ b/25.弹性布局 align-items.html
@@ -12,8 +12,8 @@
             /*align-items: center; !*交叉轴方向上居中*!*/
             /*align-items: flex-start; !*交叉轴开始方向对齐*!*/
             /*align-items: flex-end; !*交叉轴结束方向对齐*!*/
-            align-items: inherit; /*交叉轴结束方向对齐*/
-            flex-wrap: wrap;
+            align-items: baseline; /*交叉轴结束方向对齐*/
+            /*flex-wrap: wrap;*/
             width: 400px;
             height: 400px;
             background: pink;
@@ -25,15 +25,13 @@
             background: skyblue;
             border: 1px black solid;
         }
-        .body{
-            align-items:center;
-        }
     </style>
 </head>
 
 <body class="body">
 
 <div class="main">
+    xyz
     <div class="box1">1</div>
     <div class="box1">2</div>
     <div class="box1">3</div>
