--- a/3-浮动/11.空标签清除浮动.html
+++ b/3-浮动/11.空标签清除浮动.html
@@ -7,30 +7,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        body{
+            border: 1px black solid;
+        }
         .box1 {
+            width: 200px;
+            border: 1px solid black;
+        }
+        .box2{
             width: 100px;
             height: 100px;
             background: pink;
-        }
-        .box2{
-            width: 200px;
-            height: 200px;
-            background: skyblue;
             float: left;
-        }
-        .box3{
-            width: 300px;
-            height: 300px;
-            background: red;
         }
     </style>
 </head>
 <body>
-    <div class="box1"></div>
-    <div class="box2"></div>
-    <!-- 文字不会被覆盖 -->
-    <div class="box3">我是一个盒子</div>
-   
+    <div class="box1">
+        <div class="box2">
+        </div>
+        <div style="clear: both">
+        </div>
+    </div>
 </body>
-
 </html>
