--- a/2-css盒子/4.块级盒子与内联盒子.html
+++ b/2-css盒子/4.块级盒子与内联盒子.html
@@ -33,7 +33,7 @@
         内联盒子1
     </span>
     <span class="inline2">
-        内联盒子2内联盒子2
+        内联盒子2内联盒子2内联盒子2内联盒子2内联盒子2内联盒子2内联盒子2内联盒子2内联盒子2内联盒子2
     </span>
 </body>
 
