--- a/7-grid网格布局/1.定义网络及fr单位.html
+++ b/7-grid网格布局/1.定义网络及fr单位.html
@@ -3,8 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <title>定义网络及fr单位</title>
+    <style>
+        .main {
+            width: 300px;
+            height: 300px;
+            background: skyblue;
+            display: grid;
+            /*grid-template-columns: 100px 100px 100px;// 定义3列*/
+            /*grid-template-rows: 100px 100px 100px;// 定义3行*/
+            /*如果网格比容器小*/
+            /*grid-template-columns: 50px 50px 50px;*/
+            /*grid-template-rows: 50px 50px 50px;*/
+            /*网格样式*/
+            /*grid-template-columns: 50px 20% auto;*/
+            /*grid-template-rows: 50px 50px 50px;*/
+            /*fr单位*/
+            /*grid-template-columns: 1fr 1fr 1fr;*/
+            /*grid-template-rows: 1fr 1fr;*/
+            /*第一行是第二行的2倍*/
+            /*grid-template-columns: 1fr 1fr 1fr;*/
+            /*grid-template-rows: 2fr 1fr;*/
+            /*可以设置成比例，加起来等于1*/
+            /*grid-template-columns: 1fr 1fr 1fr;*/
+            /*grid-template-rows: 0.3fr 0.3fr;*/
+            /*单独给某一列或行加固定的宽度*/
+            grid-template-columns: 150px 1fr 1fr;
+            grid-template-rows: 0.3fr 0.3fr;
+        }
+
+        .main div {
+            background: pink;
+        }
+
+    </style>
+
 </head>
 <body>
-
+<div class="main">
+    <div>1</div>
+    <div>2</div>
+    <div>3</div>
+    <div>4</div>
+    <div>5</div>
+    <div>6</div>
+<!--    <div>7</div>-->
+<!--    <div>8</div>-->
+<!--    <div>9</div>-->
+</div>
 </body>
 </html>
